--- a/.verb.md
+++ b/.verb.md
@@ -2,14 +2,10 @@
 
 > {%= description %}
 
-## Install
-{%= include("install") %}
+{%= include("install-npm", {save: true}) %}
 
-## Run tests
-
-```bash
-npm test
-```
+## Running tests
+{%= include("tests") %}
 
 ## Usage
 
@@ -18,9 +14,6 @@ var mixinDeep = require('{%= name %}');
 
 mixinDeep({a: {aa: 'aa'}}, {a: {bb: 'bb'}}, {a: {cc: 'cc'}});
 //=> { a: { aa: 'aa', bb: 'bb', cc: 'cc' } }
-
-mixinDeep({a: {aa: 'aa', dd: {ee: 'ff'}}}, {a: {bb: 'bb', dd: {gg: 'hh'}}}, {a: {cc: 'cc', dd: {ii: 'jj'}}});
-//=> { a: { aa: 'aa', dd: { ee: 'ff', gg: 'hh', ii: 'jj' }, bb: 'bb', cc: 'cc' } }
 ```
 
 ## Author
