update docs sections

--- a/.verb.md
+++ b/.verb.md
@@ -4,8 +4,6 @@
 
 {%= include("install-npm", {save: true}) %}
 
-## Running tests
-{%= include("tests") %}
 
 ## Usage
 
@@ -15,6 +13,15 @@ var mixinDeep = require('{%= name %}');
 mixinDeep({a: {aa: 'aa'}}, {a: {bb: 'bb'}}, {a: {cc: 'cc'}});
 //=> { a: { aa: 'aa', bb: 'bb', cc: 'cc' } }
 ```
+
+## Related projects
+{%= related(['merge-deep', 'extend-shallow', 'assign-deep']) %}
+
+## Running tests
+{%= include("tests") %}
+
+## Contributing
+{%= include("contributing") %}
 
 ## Author
 {%= include("author") %}
