--- a/.verb.md
+++ b/.verb.md
@@ -2,8 +2,9 @@
 
 > {%= description %}
 
+## Install
 {%= include("install-npm", {save: true}) %}
-
+{%= include("install-bower", {save: true}) %}
 
 ## Usage
 
@@ -15,7 +16,7 @@ mixinDeep({a: {aa: 'aa'}}, {a: {bb: 'bb'}}, {a: {cc: 'cc'}});
 ```
 
 ## Related projects
-{%= related(['merge-deep', 'extend-shallow', 'assign-deep']) %}
+{%= related(['merge-deep', 'mixin-deep', 'extend-shallow', 'assign-deep', 'defaults-deep', 'omit-deep'], {remove: name}) %}
 
 ## Running tests
 {%= include("tests") %}
