--- a/.verb.md
+++ b/.verb.md
@@ -1,8 +1,8 @@
 ## Usage
 
 ```js
-var mixinDeep = require('{%= name %}');
-
-mixinDeep({a: {aa: 'aa'}}, {a: {bb: 'bb'}}, {a: {cc: 'cc'}});
-//=> { a: { aa: 'aa', bb: 'bb', cc: 'cc' } }
+const mixin = require('{%= name %}');
+const res = mixin({ a: { foo: true } }, { a: { bar: true } }, { a: { baz: true } });
+console.log(res);
+//=> { a: { foo: true, bar: true, baz: true } }
 ```
