disallow constructor and prototype keys

--- a/.verb.md
+++ b/.verb.md
@@ -1,3 +1,7 @@
+## Heads up!
+
+[Please update][update] to version 2.0.1 or later, a critical bug was fixed in that version.
+
 ## Usage
 
 ```js
@@ -6,3 +10,6 @@ const res = mixin({ a: { foo: true } }, { a: { bar: true } }, { a: { baz: true }
 console.log(res);
 //=> { a: { foo: true, bar: true, baz: true } }
 ```
+
+
+[update]: https://gist.github.com/jonschlinkert/9a62534c4f8bc76aee6058caa3f05fd6
